Add initial project structure with CMake configuration and main application code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Build directories
+/build/
+/out/
+/cmake-build-*/
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.vcxproj.filters
+
 # Prerequisites
 *.d
 
@@ -30,3 +47,22 @@
 *.exe
 *.out
 *.app
+
+# macOS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows specific
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# CMake specific
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+cmake_install.cmake
+CTestTestfile.cmake
+install_manifest.txt
+compile_commands.json
